[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Beverwiek.mw
+++ b/Beverwiek.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge =Flag_of_Beverwijk.gif
 | bestaandsnaam woapn = Beverwijk wapen.png
 | lokatie = LocatieBeverwijk
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = '''Beverwiek'''
 | öppervlakte = 19,60
 | öppervlakte laand = 17,82
