--- a/Blaricum.mw
+++ b/Blaricum.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Blaricum vlag.svg
 | bestaandsnaam woapn = Blaricum wapen.svg
 | lokatie = Dutch Municipality Blaricum 2006
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = '''Blaricum'''
 | öppervlakte = 15,59
 | öppervlakte laand = 15,59
