[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Bussum.mw
+++ b/Bussum.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Flag of Bussum.svg
 | bestaandsnaam wapen = Coat of arms of Bussum.svg
 | lokasie = LocatieBussum
-| provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaotse = Bussum
 | oppervlakte = 8,10
 | oppervlakte laand = 8,04
