--- a/Castricum.mw
+++ b/Castricum.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Castricum vlag.svg
 | bestaandsnaam woapn = Castricum wapen.png
 | lokatie = LocatieCastricum
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Castricum
 | öppervlakte = 59,93
 | öppervlakte laand = 49,58
