--- a/Den_Helder.mw
+++ b/Den_Helder.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Flag of Den Helder.svg
 | bestaandsnaam woapn = Coat of arms of Den Helder.svg
 | lokatie = LocatieDenHelder
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Den Helder
 | öppervlakte = 178,84
 | öppervlakte laand = 45,41
