--- a/Enkhuzen.mw
+++ b/Enkhuzen.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Enkhuizen vlag.svg
 | bestaandsnaam woapn = Enkhuizen wapen.png
 | lokatie = LocatieEnkhuizen
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Enkhuzen
 | öppervlakte = 14,31
 | öppervlakte laand = 12,53
