[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Groft-De_Riep.mw
+++ b/Groft-De_Riep.mw
@@ -3,7 +3,7 @@ naam = Groft-De Riep |
 bestaandsnaam vlagge = Graft-De-Rijp vlag.png |
 bestaandsnaam wapen = Graft-De-Rijp wapen.png |
 lokasie = LocatieGraft-DeRijp |
-provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = [[De Riep]] |
 oppervlakte = 21,76 |
 oppervlakte laand = 20,03 |
