[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Haorenkarspel.mw
+++ b/Haorenkarspel.mw
@@ -3,7 +3,7 @@ naam = Haorenkarspel |
 bestaandsnaam vlagge = Harenkarspel flag.png |
 bestaandsnaam wapen = Harenkarspel wapen.png |
 lokasie = LocatieHarenkarspel |
-provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Hollaand]] |
+provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Hollaand]] |
 heufdplaotse = [[Tuitjenhorn]] |
 oppervlakte = 54,84 |
 oppervlakte laand = 45,59 |
