--- a/Heemstede_(Noord-Hollaand).mw
+++ b/Heemstede_(Noord-Hollaand).mw
@@ -3,7 +3,7 @@ naam = Heemstede |
 bestaandsnaam vlagge = Flag of Heemstede.svg |
 bestaandsnaam woapn = Coat of arms of Heemstede.svg |
 lokatie = LocatieHeemstede |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = '''Heemstede''' |
 öppervlakte = 9,61 |
 öppervlakte laand = 9,46 |
