--- a/Heiloo.mw
+++ b/Heiloo.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Heiloo vlag.png
 | bestaandsnaam woapn = Heiloo wapen.png
 | lokatie = LocatieHeiloo
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Heiloo
 | öppervlakte = 19,01
 | öppervlakte laand = -
