--- a/Hilversum.mw
+++ b/Hilversum.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Hilversum vlag.svg
 | bestaandsnaam woapn = Hilversum wapen.png
 | lokatie = LocatieHilversum
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Hilversum
 | öppervlakte = 46,19
 | öppervlakte laand = 45,98
