--- a/Hoorn_(Noord-Hollaand).mw
+++ b/Hoorn_(Noord-Hollaand).mw
@@ -3,7 +3,7 @@ naam = Hoorn |
 bestaandsnaam vlagge = Hoorn flag outline.png |
 bestaandsnaam woapn = Hoorn wapen HRvA.svg |
 lokatie = Dutch Municipality Hoorn 2006 |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = '''Hoorn''' |
 öppervlakte = 52,49 |
 öppervlakte laand = 19,87 |
