[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Huzen.mw
+++ b/Huzen.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Huizen vlag.svg
 | bestaandsnaam woapn = Huizen wapen.svg
 | lokatie = LocatieHuizen
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Huzen
 | öppervlakte = 23,33
 | öppervlakte laand = 22,98
