[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Laandsmeer.mw
+++ b/Laandsmeer.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Landsmeer vlag.png
 | bestaandsnaam woapn = Landsmeer wapen.png
 | lokatie = LocatieLandsmeer
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Laandsmeer
 | öppervlakte = 26,44
 | öppervlakte laand = 22,76
