--- a/Langediek.mw
+++ b/Langediek.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Langedijk vlag.png
 | bestaandsnaam woapn = Langedijk wapen.png
 | lokatie = LocatieLangedijk
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Langediek
 | öppervlakte = 26,99
 | öppervlakte laand = 26,16
