--- a/Laoren_(Noord-Holland).mw
+++ b/Laoren_(Noord-Holland).mw
@@ -3,7 +3,7 @@ naam = Laoren |
 bestaandsnaam vlagge = Flag of Laren, North Holland.svg |
 bestaandsnaam waopn = Caot of arms of Laren (North Holland).svg |
 lokatie = LocatieLaren |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Laoren]] |
 öppervlakte = 12,37 |
 öppervlakte laand = 12,18 |
