[[Flevolandflag.svg]] is vervungen deur [[Flag_of_Flevoland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Flevolaand.mw
+++ b/Flevolaand.mw
@@ -1,6 +1,6 @@
 {{Pervincietabel
 | titel = Provinsie Flevolaand
-| vlag = Flevolandflag.svg
+| vlag = Flag of Flevoland.svg
 | waopen =
 | kaort = Flevoland-Position.png
 | heufdstad = [[Lelystad]]
