[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Medemblik.mw
+++ b/Medemblik.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Flag_of_Medemblik.svg
 | bestaandsnaam woapn = Medemblik.svg
 | lokatie = LocatieMedemblik
-| proveensie = [[Bestaand:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Hollaand]]
+| proveensie = [[Bestaand:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Hollaand]]
 | heufdplaats = Medemblik
 | öppervlakte = 257,56
 | öppervlakte laand = 121,81
