--- a/Naarden.mw
+++ b/Naarden.mw
@@ -3,7 +3,7 @@ naam = Naarden |
 bestaandsnaam vlagge = Naarden vlag.svg |
 bestaandsnaam wapen = Coat of arms of Naarden.svg |
 lokasie = Dutch Municipality Naarden 2006 |
-provinsie = [[Bestaand:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Bestaand:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = Naarden |
 oppervlakte = 32,89 |
 oppervlakte laand = 21,42 |
