[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Niedarp.mw
+++ b/Niedarp.mw
@@ -3,7 +3,7 @@ naam = Niedarp |
 bestaandsnaam vlagge = Niedorp vlag.svg |
 bestaandsnaam wapen = Niedorp wapen.svg |
 lokasie = LocatieNiedorp |
-provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = |
 oppervlakte = 65,54 |
 oppervlakte laand = 64,11 |
