[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Oostzaan.mw
+++ b/Oostzaan.mw
@@ -3,7 +3,7 @@ naam = Oostzaan |
 bestaandsnaam vlagge =|
 bestaandsnaam woapn =Coat_of_arms_of_Oostzaan.png |
 lokatie = Dutch Municipality Oostzaan 2006 |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Oostzaan |
 öppervlakte = 16,13 |
 öppervlakte laand = 11,49 |
