[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Older-Amstel.mw
+++ b/Older-Amstel.mw
@@ -3,7 +3,7 @@ naam = Older-Amstel |
 bestaandsnaam vlagge = Ouder-Amstel flag.svg |
 bestaandsnaam woapn = Ouder-Amstel wapen.png |
 lokatie = LocatieOuder-Amstel |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Older-Amstel |
 öppervlakte = 26,15 |
 öppervlakte laand = - |
