--- a/Purmerend.mw
+++ b/Purmerend.mw
@@ -3,7 +3,7 @@ naam = Purmerend |
 bestaandsnaam vlagge = Flag of Purmerend.svg |
 bestaandsnaam woapn = Gemeentewapenpurmerend.gif |
 lokatie = Dutch Municipality Purmerend 2006 |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Purmerend |
 öppervlakte = 24,52 |
 öppervlakte laand = 23,87 |
