[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Schagen.mw
+++ b/Schagen.mw
@@ -3,7 +3,7 @@ naam = Schagen |
 bestaandsnaam vlagge = Flag of Schagen.svg |
 bestaandsnaam woapn = Schagen wapen 2015.svg |
 lokatie-svg = Map - NL - Municipality code 0441 (2012).svg |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Schagen |
 öppervlakte = 187,53 |
 öppervlakte laand = - |
