--- a/Scharmer.mw
+++ b/Scharmer.mw
@@ -3,7 +3,7 @@ naam = Scharmer |
 bestaandsnaam vlagge = Flag_of_Schermer.png |
 bestaandsnaam wapen = Schermer wapen.png |
 lokasie = Dutch_Municipality_Schermer_2006 |
-provinsie = [[Bestaand:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Bestaand:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = [[Stompetoren]] |
 oppervlakte = 64,39 |
 oppervlakte laand = 61,39 |
