[[Flevolandflag.svg]] is vervungen deur [[Flag_of_Flevoland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Liest_van_plaotsen_in_Flevolaand.mw
+++ b/Liest_van_plaotsen_in_Flevolaand.mw
@@ -1,6 +1,6 @@
 {| align=center class=toccolours 
 |- align=center
-|[[Bestaand:Flevolandflag.svg|130px|Provinsievlagge]]||Liest van [[Flevolaand]]se [[stad (woonstee)|steden]], [[darp|dörpen]] en [[buurtschop|buurtskappen]]<br>mit n verwezing naor de [[gemiente (bestuur)|gemiente]] waortoe ze be-oren.
+|[[Bestaand:Flag of Flevoland.svg|130px|Provinsievlagge]]||Liest van [[Flevolaand]]se [[stad (woonstee)|steden]], [[darp|dörpen]] en [[buurtschop|buurtskappen]]<br>mit n verwezing naor de [[gemiente (bestuur)|gemiente]] waortoe ze be-oren.
 __NOTOC__
 {{abc}}
 |}
