[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Stede_Brook.mw
+++ b/Stede_Brook.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Stede-Broec vlag.png
 | bestaandsnaam woapn = Stede-Broec wapen.svg
 | lokatie = LocatieStedeBroec
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = [[Bovenkarspel]]
 | öppervlakte = 31,19
 | öppervlakte laand = 16,42
