[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Tessel.mw
+++ b/Tessel.mw
@@ -3,7 +3,7 @@ naam = Tessel |
 bestaandsnaam vlagge = Vlagtexel.jpg |
 bestaandsnaam woapn = Texel wapen.svg |
 lokatie = LocatieTexel |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Den Burg]] |
 öppervlakte = 585,96 |
 öppervlakte laand = 169,82 |
