--- a/Uutgeest.mw
+++ b/Uutgeest.mw
@@ -3,7 +3,7 @@ naeme = Uutgeest |
 bestaansnaeme vlagge = Uitgeest vlag.svg |
 bestaansnaeme waopen = Uitgeest wapen.png |
 lekaosie = Dutch Municipality Uitgeest 2006 |
-perveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+perveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplak = Uutgeest |
 oppervlak = 22,22 |
 oppervlak laand = 18,90 |
