[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Uuthoorn.mw
+++ b/Uuthoorn.mw
@@ -3,7 +3,7 @@ naam = Uuthoorn |
 bestaandsnaam vlagge = Uithoorn vlag.svg |
 bestaandsnaam woapn = Coat of arms of Uithoorn.svg |
 lokatie = LocatieUithoorn |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Uuthoorn |
 öppervlakte = 22,22 |
 öppervlakte laand = 18,29 |
