[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Velsen.mw
+++ b/Velsen.mw
@@ -3,7 +3,7 @@ naam = Velsen |
 bestaandsnaam vlagge = Velsen vlag.png |
 bestaandsnaam woapn = Velsen wapen.png |
 lokatie = LocatieVelsen |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[IJmuiden]] |
 öppervlakte = 52,87 |
 öppervlakte laand = 46,57 |
