[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Waterlaand_(gemeente).mw
+++ b/Waterlaand_(gemeente).mw
@@ -3,7 +3,7 @@ naam = Waterlaand |
 bestaandsnaam vlagge = Waterland vlag.png |
 bestaandsnaam woapn = waterlandwapen.jpg |
 lokatie = LocatieWaterland |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Monnickendam]] |
 öppervlakte = 115,6 |
 öppervlakte laand = 62,0 |
