--- a/Weesp.mw
+++ b/Weesp.mw
@@ -3,7 +3,7 @@ naam = Weesp |
 bestaandsnaam vlagge = Weesp vlag.png |
 bestaandsnaam woapn = Weesp wapen.png |
 lokatie = LocatieWeesp |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Weesp |
 öppervlakte = 21,88 |
 öppervlakte laand = 20,67 |
