[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Warvershoof.mw
+++ b/Warvershoof.mw
@@ -3,7 +3,7 @@ naam = Warvershoof |
 bestaandsnaam vlagge = Flag of Wervershoof.svg |
 bestaandsnaam wapen = Wervershoof wapen.svg |
 lokasie = LocatieWervershoof |
-provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = Warvershoof |
 oppervlakte = 30,85 |
 oppervlakte laand = 24,13 |
