[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Wieringen.mw
+++ b/Wieringen.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Wieringen vlag.svg
 | bestaandsnaam wapen = Wieringen wapen.svg
 | lokasie-svg = LocatieWieringen.png
-| provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaotse = [[Hippolytushoef]]
 | oppervlakte = 212,50
 | oppervlakte laand = 26,77
