[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Wieringermeer.mw
+++ b/Wieringermeer.mw
@@ -3,7 +3,7 @@ naam = Wieringermeer |
 bestaandsnaam vlagge = Wieringermeer vlag.svg |
 bestaandsnaam wapen = Wieringermeer wapen.svg |
 lokasie = LocatieWieringermeer |
-provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = [[Wieringerwarf]] |
 oppervlakte = 309,37 |
 oppervlakte laand = 206,57 |
