--- a/Wiedemeren.mw
+++ b/Wiedemeren.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Wijdemeren vlag.png
 | bestaandsnaam woapn = Wijdemeren.svg
 | lokatie-svg = LocatieWijdemeren.png
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = [[Loosdrecht]]
 | öppervlakte = 76,55
 | öppervlakte laand = 48,09
