--- a/Wormerlaand.mw
+++ b/Wormerlaand.mw
@@ -3,7 +3,7 @@ naam = Wormerlaand |
 bestaandsnaam vlagge = Wormerland vlag.png |
 bestaandsnaam woapn = Wormerland wapen.png |
 lokatie = LocatieWormerland |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Wormer]] |
 öppervlakte = 45,14 |
 öppervlakte laand = 38,63 |
