[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Zaanstad.mw
+++ b/Zaanstad.mw
@@ -3,7 +3,7 @@ naeme = Zaanstad |
 bestaansnaeme vlagge = Flag of Zaanstad.svg |
 bestaansnaeme waopen = Coat of arms of Zaanstad.svg |
 lekaosie = LocatieZaanstad |
-perveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+perveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplak = [[Zaandiek]] (gemeentehoes) |  
 oppervlak = 83,02 |
 oppervlak laand = ca. 70 |
