[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Zaandvoort.mw
+++ b/Zaandvoort.mw
@@ -3,7 +3,7 @@ naam = Zaandvoort |
 bestaandsnaam vlagge = Zandvoort flag.png |
 bestaandsnaam woapn = Zandvoort wapen.png |
 lokatie = LocatieZandvoort |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Zaandvoort |
 öppervlakte = 33,82 |
 öppervlakte laand =  |
