[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Zeevang.mw
+++ b/Zeevang.mw
@@ -3,7 +3,7 @@ naam = Zeevang |
 bestaandsnaam vlagge = Zeevang vlag.svg |
 bestaandsnaam woapn = Zeevang wapen.svg |
 lokatie = Dutch Municipality Zeevang 2006 |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Oosthuzen]] |
 öppervlakte = 54,34 |
 öppervlakte laand = 37,68 |
