--- a/Opmeer.mw
+++ b/Opmeer.mw
@@ -3,7 +3,7 @@ naam = Opmeer |
 bestaandsnaam vlagge = Opmeer vlag.png |
 bestaandsnaam woapn = Opmeer wapen.png |
 lokatie = LocatieOpmeer |
-proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
+proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Opmeer |
 öppervlakte = 42,27 |
 öppervlakte laand = 41,96 |
