[[Coat_of_arms_of_Haarlemmerliede_en_Spaarnwoude.svg]] is vervungen deur [[Coat_of_arms_of_Haarlemmerliede_en_Spaarnwoude_(1986-2018).svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:C

--- a/Haorlemmerliede_en_Spaornwolde.mw
+++ b/Haorlemmerliede_en_Spaornwolde.mw
@@ -1,7 +1,7 @@
 {{Gemeante |
 naam = Haorlemmerliede en Spaornwolde |
 bestaandsnaam vlagge = Haarlemmerliede en Spaarnwoude vlag.svg |
-bestaandsnaam woapn = Coat of arms of Haarlemmerliede en Spaarnwoude.svg |
+bestaandsnaam woapn = Coat of arms of Haarlemmerliede en Spaarnwoude (1986-2018).svg |
 lokatie = LocatieHaarlemmerliedeEnSpaarnwoude |
 proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Halfweg]] |
