--- a/Cork_(stad).mw
+++ b/Cork_(stad).mw
@@ -6,5 +6,12 @@ n Naamn van disn stad keump van t [[Iers]]e ''corcach'' [kʷərˈkʷɑxʷ] wat "
 == Geskiedenisse ==
 Cork was eerst n kloosterneerzetting, esticht duur [[St. Finbarr]] in t 6e doarhoonderd, mear gröaidn pas oet töt ne stad tusken [[915]] en [[922]] toew at de [[Vikings|Noormänne]] dr nen haandelshaawn van maakn.
 
+<br><gallery>
+Cork-04-Platz-2017-gje.jpg
+Cork-08-Rettungsring-2017-gje.jpg
+Cork-12-Strasse-2017-gje.jpg
+Cork-20-Linen Weaver-2017-gje.jpg
+</gallery>
+
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Stad in Ierlaand]]
