--- a/Askwoonsdag.mw
+++ b/Askwoonsdag.mw
@@ -1,7 +1,11 @@
-'''Askwoonsdag''' is den dag wanneyr as de [[Vastentyd]] begünt. Dissend is sessenveertig dage vöär [[Gode Vrydag]]. Officieel het den dag ''Den dag van de aske'', mar ümdat et ait up nen woonsdag is, wörd et ait Askwoonsdag enöömd. Et kümt neet in den Bybel in vöär.
+'''Askwoonsdag''' is den dag wanneyr as de [[Katolike]] [[Vastentyd]] begünt. Dissend is sessenveertig dage vöär [[Gode Vrydag]]. Officieel het den dag ''Den dag van de aske'', mar ümdat et ait up nen woonsdag is, wörd et ait Askwoonsdag enöömd. Et kümt neet in den Bybel in vöär.
 
-In Katholike strekken wörd de weakende te vöärend [[Karnaval]] evyred. Dat höldt up med dissen woonsdag, wår as de Vasteltyd begünt. Dit duurt officieel 40 dage, so as ok Jesus 40 dage in de wöäste rundedwaled hadde sunder etten. De sesse sündagen de tüsken höärt der neet by, dårümme duurt et sessenveertig dage van Askwoonsdag töt [[Påske]].
+In Katolike strekken wörd de weakende te vöärend [[Karnaval]] evyred. Dat höldt up med dissen woonsdag, wår as de Vasteltyd begünt. Dit duurt officieel 40 dage, so as ok Jesus 40 dage in de wöäste rundedwaled hadde sunder etten. De sesse sündagen de tüsken höärt der neet by, dårümme duurt et sessenveertig dage van Askwoonsdag töt [[Påske]].
 
 In summige strekken is et tydensk de deenst in de karke noch gewoon ümme een krüsien van aske up uwen vöärkop te krygen, dissen dag. De aske kümt van de palmpåsken-blader van et jår der up, wat verbrandet wördet.
+
+Van older was et de gewöänte ümme tydensk et vasten mar eyne måltyd den dag te etten, en u disse heyle tyd up et påske-mystery te richtten gån. Teagenwoordig doot lüde byvöärbeald ümme veertig dage sunder telefoon of sunder alkohol of geyn auto meyr döär te gån
+
+Vöäl meyr protestanten doot dissen dag ouk as startskot vöär de Vastentijd.
 
 {{Dialekt|sdz}}
