*Empty MediaWiki Message*

--- a/Askwoonsdag.mw
+++ b/Askwoonsdag.mw
@@ -2,7 +2,7 @@
 
 In Katolike strekken wörd de weakende te vöärend [[Karnaval]] evyred. Dat höldt up med dissen woonsdag, wår as de Vasteltyd begünt. Dit duurt officieel 40 dage, so as ok Jesus 40 dage in de wöäste rundedwaled hadde sunder etten. De sesse sündagen de tüsken höärt der neet by, dårümme duurt et sessenveertig dage van Askwoonsdag töt Påske.
 
-In summige strekken is et tydensk de deenst in de karke noch gewoon ümme een krüsien van aske up uwen vöärkop te krygen, dissen dag. De aske kümt van de palmpåsken-takke, dee as gebrüked bint up [[Palmsündag]] et jår der up. Dissend bint nu dröyge en wördet. Dit steyt symbool vöär unse starvelikheid, dee as Jesus Christus up eheaven hevt med syne upstanding med Påske. U med aske låten beströien steyt in den Bybel ouk wal vöär et hebben van berouw. Mar aske betekkend ouk ny leaven, ümdat aske den grond vrüchtbaar maakt. Ouk hevt aske een betekkenisse van reinigen, vrogger wörded der med aske ewasken.
+In vöäl strekken is et tydensk de deenst in de karke noch gewoon ümme een krüsien van aske up uwen vöärkop te krygen, dissen dag. De aske kümt van de palmpåsken-takke, dee as gebrüked bint up [[Palmsündag]] et jår der up. Dissend bint nu dröyge en wördet. Dit steyt symbool vöär unse starvelikheid, dee as Jesus Christus up eheaven hevt med syne upstanding med Påske. U med aske låten beströien steyt in den Bybel ouk wal vöär et hebben van berouw. Mar aske betekkend ouk ny leaven, ümdat aske den grond vrüchtbaar maakt. Ouk hevt aske een betekkenisse van reinigen, vrogger wörded der med aske ewasken. Düs et gebrüük üm u med aske te låten beströien, hevt al disse betekkenissen.
 
 Van older was et de gewöänte ümme tydensk et vasten mar eyne måltyd den dag te etten, en u disse heyle tyd up et påske-mystery te richtten gån. Teagenwoordig doot lüde byvöärbeald ümme veertig dage sunder telefoon of sunder alkohol of geyn auto meyr döär te gån
 
