*Empty MediaWiki Message*

--- a/Askwoonsdag.mw
+++ b/Askwoonsdag.mw
@@ -4,7 +4,7 @@ In Katolike strekken wörd de weakende te vöärend [[Karnaval]] evyred. Dat hö
 
 In vöäl strekken is et tydensk de deenst in de karke noch gewoon ümme een krüsien van aske up uwen vöärkop te krygen, dissen dag. De aske kümt van de palmpåsken-takke, dee as gebrüked bint up [[Palmsündag]] et jår der up. Dissend bint nu dröyge en wördet. Dit steyt symbool vöär unse starvelikheid, dee as Jesus Christus up eheaven hevt med syne upstanding med Påske. U med aske låten beströien steyt in den Bybel ouk wal vöär et hebben van berouw. Mar aske betekkend ouk ny leaven, ümdat aske den grond vrüchtbaar maakt. Ouk hevt aske een betekkenisse van reinigen, vrogger wörded der med aske ewasken. Düs et gebrüük üm u med aske te låten beströien, hevt al disse betekkenissen. De gelöyvigen belyded hyr med dat sy mar aske bint, en töt aske süllet wearümme gån. Mar de Vastentyd müt u de ogene setten up Jesus, den as up eståne uut de doud is.
 
-Van older was et de gewöänte ümme tydensk et vasten mar eyne måltyd den dag te etten, en u disse heyle tyd up et påske-mystery te richtten gån. Teagenwoordig doot lüde byvöärbeald ümme veertig dage sunder telefoon of sunder alkohol of geyn auto meyr döär te gån
+Van older was et de gewöänte ümme tydensk et vasten mar eyne måltyd den dag te etten, en u disse heyle tyd up et påske-mystery en uwen medmenske te richtten gån. Teagenwoordig doot lüde anders soort vasten. So willet junger meyr milieu bewüster doon, so as zo weinig as möägelik de auto te pakken. Of lüde willet socialer weasen döär neet alleyne mar up de telefoon te kyken. Sommigen süllet veertig dage geyn alkohol nemmen. Et geyt der ümme dat wat u ait of leidet, dat y dår vöär veertig dage ofstand van nemt. So sül y seen dat y disse dinge neet echt nöydig bint, mar dat der belangrykere dinge in de wearld bint. Y krygt de tyd ümme u te richten up uwen wåre roping.
 
 Vöäl meyr protestanten doot de låtste tyden dissen dag ouk as startskot vöär de Vastentijd.
 
