--- a/Mous.mw
+++ b/Mous.mw
@@ -42,6 +42,7 @@ dit is goud
 * [[Stellingwarfs]]: ''boerekool'', ''moes''
 * [[Tweants]]: ''moos''
 * [[Urkers]]: ''boerekool''
+*Fries: boerekoal
 * [[Veluws]]: 
 ** ''boere{{small()|n}}kool''
 **''boere{{small()|n}}moes'' ([[Une]], [[Garder]])
