--- a/Lotte_van_der_Zee.mw
+++ b/Lotte_van_der_Zee.mw
@@ -2,4 +2,6 @@
 
 February 2019 kreyg Van der Zee up wintersport een härtstilstand. See wörd kunstmåtig in [[koma]] hölden.
 
+In de avond van 6 februari is Lotte van der zee overleden
+
 {{Dialekt|sdz}}
