*Empty MediaWiki Message*

--- a/Krüüs_van_Bentheim.mw
+++ b/Krüüs_van_Bentheim.mw
@@ -1,6 +1,6 @@
 [[Bestaand:48455 Bad Bentheim, Germany - panoramio (12).jpg|right|250px]]
 
-Et '''krüüs van Bentheim''' ([[Duuts|düütsk]]: ''Herrgott von Bentheim'') is een [[krucifiks]] uut de [[10e eeuw|teende-]] of [[11e eeuw|elvde eywe]] in de [[Duutslaand|düütske]] plaatse [[Bad Bentheim]].
+Et '''krüüs van Benthem''' ([[Duuts|düütsk]]: ''Herrgott von Bentheim'') is een [[krucifiks]] uut de [[10e eeuw|teende-]] of [[11e eeuw|elvde eywe]] in de [[Duutslaand|düütske]] plaatse [[Bad Bentheim|Bad Benthem]].
 
 ==Beskryvving==
 Et beald is emaked van [[Bentheimer zaandstien|bentheimer sandsteyn]] in [[romaanse kunst|romaanske styl]] en beald een [[Jezus (traditioneel-christelijk)|Christus]] an et krüüs uut. Et hevt waerde ümdat dit beald eyne van de oldste vöärwarpen is van et christendom in dit deyl van Düütskland. Der wördt edacht dat et beald kenmarken hevt van de [[Saksen (volk)|oldsassiske]] kulture. De wyse ho as de arms van Christus eböägen bint, sol gelyke weasen med et gebår van een germaanske rechter, wanneyr as hee sprekken döäd. Et krüüs is 2,45 meater houge en 1,40 meater breyd.
