--- a/Krüüs_van_Bentheim.mw
+++ b/Krüüs_van_Bentheim.mw
@@ -3,7 +3,7 @@
 Et '''krüüs van Benthem''' ([[Duuts|düütsk]]: ''Herrgott von Bentheim'') is een [[krucifiks]] uut de [[10e eeuw|teende-]] of [[11e eeuw|elvde eywe]] in de [[Duutslaand|düütske]] plaatse [[Bad Bentheim|Bad Benthem]].
 
 ==Beskryvving==
-Et beald is emaked van [[Bentheimer zaandstien|bentheimer sandsteyn]] in [[romaanse kunst|romaanske styl]] en beald een [[Jezus (traditioneel-christelijk)|Christus]] an et krüüs uut. Et hevt waerde ümdat dit beald eyne van de oldste vöärwarpen is van et christendom in dit deyl van Düütskland. Der wördt edacht dat et beald kenmarken hevt van de [[Saksen (volk)|oldsassiske]] kulture. De wyse ho as de arms van Christus eböägen bint, sol gelyke weasen med et gebår van een germaanske rechter, wanneyr as hee sprekken döäd. Et krüüs is 2,45 meater houge en 1,40 meater breyd.
+Et beald is emaked van [[Bentheimer zaandstien|benthemmer sandsteyn]] in [[romaanse kunst|romaanske styl]] en beald een [[Jezus (traditioneel-christelijk)|Christus]] an et krüüs üüt. Et hevt waerde ümdat dit beald eyne van de oldste vöärwarpen is van et christendom in dit deyl van Düütskland. Der wördt edacht dat et beald kenmarken hevt van de [[Saksen (volk)|oldsassiske]] kulture. De wyse ho as den arms van Christus eböägen bint, sol gelyke weasen med et gebår van een germaanske rechter, wanneyr as hee sprekken döäd. Et krüüs is 2,45 meater houge en 1,40 meater breyd.
 
 ==Geskydenisse==
 In [[1828]] hebbed sy et krüüs up een akker körtby [[Schulte-Kolthoff]] evünden. Et beald sol dårümme een [[wegkruus|wegkrüüs]] ewesd künnen hebben, wat nå et begün van de [[rifformatie|reformaty]] in 1544 is ümme-gooied en dårnå under et sand ekummen is. In [[1868]] wördden et beald up de binnenplaatse van [[Kasteel Bentheim]] esetted. Up dee plaatse güng et in [[1945]] kapot döär een [[Geallieerden (Tweede Wereldoorlog)|geallieerd]] leagervoortüüg. Dårnå hebbed sy et erestaureyred en in [[1951]] terügge-setted.
