--- a/Krüüs_van_Bentheim.mw
+++ b/Krüüs_van_Bentheim.mw
@@ -9,7 +9,7 @@ Et beald is emaked van [[Bentheimer zaandstien|benthemmer sandsteyn]] in [[romaa
 In [[1828]] hebbed sy et krüüs up een akker körtby [[Schulte-Kolthoff]] evünden. Et beald sol dårümme een [[wegkruus|wegkrüüs]] ewesd künnen hebben, wat nå et begün van de [[rifformatie|reformaty]] in 1544 is ümme-gooied en dårnå under et sand ekummen is. In [[1868]] wördden et beald up de binnenplaatse van [[Kasteel Bentheim]] esetted. Up dee plaatse güng et in [[1945]] kapot döär een [[Geallieerden (Tweede Wereldoorlog)|geallieerd]] leagervoortüüg. Dårnå hebbed sy et erestaureyred en in [[1951]] terügge-setted.
 
 ==Weatyn==
-* ''Herrgott von Bentheim'' was vrogger een [[vlook]], wår de landwarkers med skelden
+* ''Herrgott von Bentheim'' was vrogger een [[vlook]], wår de landwarkers med skelleden
 
 
 {{Dialekt|sdz}}
